易买网图书商城前后台整合抽取版

--- a/BookStore/WebContent/Manager/login.html
+++ b/BookStore/WebContent/Manager/login.html
@@ -18,7 +18,7 @@
 		<em class="corner rt"></em>
 		<div class="box">
 			<h2>购物商城后台管理</h2>
-			<form id="loginForm" method="post" action="/BookStore/ManaLoginServlet" onsubmit="return checkForm(this)">
+			<form id="loginForm" method="post" action="/BookStore/ManaLoginServlet?method=login" onsubmit="return checkForm(this)">
 				<table>
 					<tr>
 						<td class="field">* 用户名：</td>
