--- a/BookStore/WebContent/reg-result.html
+++ b/BookStore/WebContent/reg-result.html
@@ -16,7 +16,7 @@
 	<div class="help"><a href="/BookStore/register.html">注册</a><a href="/BookStore/LoginOutServlet">安全退出</a></div>
 	<div class="navbar">
 		<ul class="clearfix">
-			<li class="current"><a href="/BookStore/product_hall.jsp">首页</a></li>
+			<li class="current"><a href="#">首页</a></li>
 			<li><a href="#">图书</a></li>
 			<li><a href="#">百货</a></li>
 			<li><a href="#">品牌</a></li>
