--- a/BookStore/WebContent/shopping-result.html
+++ b/BookStore/WebContent/shopping-result.html
@@ -7,11 +7,11 @@
 </head>
 <div id="header" class="wrap">
 	<div id="logo"><img src="static/images/logo.gif" /></div>
-	<div class="help"><a href="/BookStore/ShowCarServlet" class="shopping">购物车</a><a href="/BookStore/history_data.jsp">订单历史记录</a><a href="/BookStore/register.html">注册</a><a href="/Shop/LoginOutServlet">安全退出</a></div>
+	<div class="help"><a href="ShowCarServlet?method=showCar" class="shopping">购物车</a><a href="HistoryServlet?method=showHistory">订单历史记录</a><a href="/BookStore/register.html">注册</a><a href="UserServlet?method=loginOut">安全退出</a></div>
 	<div class="navbar">
 		<ul class="clearfix">
-			<li class="current"><a href="/BookStore/ProductServlet">首页</a></li>
-			<li><a href="/BookStore/BookListServlet">图书</a></li>
+			<li class="current"><a href="ProductServlet?method=showHall">首页</a></li>
+			<li><a href="BookServlet?method=showAllBook">图书</a></li>
 			<li><a href="#">百货</a></li>
 			<li><a href="#">品牌</a></li>
 			<li><a href="#">促销</a></li>
@@ -49,7 +49,7 @@
 					<p>恭喜您：购买成功！</p>
 					<p>正在跳转进入网站首页...</p>
 					<script type="text/javascript">
-						setTimeout("location.href='/BookStore/ProductServlet'", 3000);
+						setTimeout("location.href='ProductServlet?method=showHall'", 3000);
 					</script>
 				</div>
 			</div>
